--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Compiled class file
 *.class
+.target/*
 
 # Log file
 *.log
@@ -9,6 +10,8 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+.project
+.settings/*
 
 # Package Files #
 *.jar
@@ -21,3 +24,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.project
+.settings/org.eclipse.m2e.core.prefs
+target/classes/META-INF/maven/co.edu.usbbog.bdd/api_banco_bogota/pom.properties
+.settings/org.eclipse.m2e.core.prefs
+.settings/org.eclipse.m2e.core.prefs
+target/classes/META-INF/maven/co.edu.usbbog.bdd/api_banco_bogota/pom.xml
+target/classes/META-INF/maven/co.edu.usbbog.bdd/api_banco_bogota/pom.properties
+target/classes/application.properties
